--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -4,13 +4,12 @@ on: [push]
 
 jobs:
   build:
-
-    runs-on: [ubuntu-latest, ubuntu-16.04, windows-latest, windows-2016, macOS-latest]
     strategy:
       max-parallel: 5
       matrix:
         python-version: [3.7, 3.8]
-
+        platform: [ubuntu-latest, ubuntu-16.04, windows-latest, windows-2016, macOS-latest]
+    runs-on: ${{ matrix.platform }}
     steps:
     - uses: actions/checkout@v1
     - name: Set up Python ${{ matrix.python-version }}
