--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       max-parallel: 5
       matrix:
-        python-version: [3.7, 3.8]
+        python-version: [3.7]
         platform: [ubuntu-latest, ubuntu-16.04, windows-latest, windows-2016, macOS-latest]
     runs-on: ${{ matrix.platform }}
     steps:
