--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -8,8 +8,7 @@ jobs:
       max-parallel: 5
       matrix:
         python-version: [3.7]
-        platform: [ubuntu-latest, ubuntu-16.04, windows-latest, windows-2016, macOS-latest]
-    runs-on: ${{ matrix.platform }}
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
     - name: Set up Python ${{ matrix.python-version }}
